# bijira-samples

./: .gitignore  README.md
.samples/: index.json
chat-service-api/: README.md  asyncapi.yaml
chat-service-api/.choreo/: component.yaml
cloudmersive-currency-api/: README.md  openapi.yaml
countries-api/: README.md  schema.graphql
countries-api/.choreo/: component.yaml
external-lib/mcp-use/: pyproject.toml
external-lib/mcp-use/mcp_use/: client.py
external-lib/mcp-use/mcp_use/connectors/: base.py  http.py
github-api-websub/: asyncapi.yaml
github-api-websub/.choreo/: component.yaml
mcp-card-promotion-server/: README.md  card-promotions.json  card-promotions.ts  instructions.md  openapi.yaml  package-lock.json  package.json  stdio.ts  streamableHttp.ts
mcp-card-promotion-server/.choreo/: component.yaml
mcp-chat-agent/: Dockerfile  README.md  app.py  mcp_client.py  oauth2_utils.py  requirements.txt
mcp-chat-agent/templates/: chat.html
mcp-everything-server/: Dockerfile  README.md  everything.ts  index.ts  instructions.md  openapi.yaml  package-lock.json  package.json  pizzaMenu.json
mcp-everything-server/.choreo/: component.yaml
open-ai-api/: README.md
openweathermap-api/: README.md  api-key
petstore-api/: README.md
reading-list-api/: README.md  open-api.yaml
reading-list-api/.choreo/: component.yaml
services/accounts-service-nodejs/: README.md  app.mjs  index.mjs  openapi.yaml  package-lock.json  test.mjs
services/card-promotion-service-nodejs/: README.md  app.mjs  index.mjs  openapi.yaml  package-lock.json  package.json  test.mjs
services/chat-service-nodejs/: ChatRoom.js  User.js  asyncapi.yaml  (+3 more)
(+25 files in other folders)
